<resources>
    <string name="app_name">Fitomatic</string>
    <string name="title_home">Home</string>
    <string name="login_was_successful">Login was Successful</string>
    <string name="title_activity_user_profile">userProfile</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--> All the activities </-->
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="weightLifting">Weight Lifting</string>
    <string name="rowing">Rowing</string>
    <string name="yoga">Yoga</string>
    <string name="soccer">Soccer</string>
    <string name="hiking">Hiking</string>
    <string name="gymnastics">Gymnastics</string>
    <string name="aFL">AFL</string>
    <string name="tennis">Tennis</string>
    <string name="rugby">Rugby</string>
    <string name="surfing">Surfing</string>
    <string name="golf">Golf</string>
    <string name="bowling">Bowling</string>
    <string name="karate">Karate</string>
    <string name="bouldering">Bouldering</string>
    <string name="rockClimbing">Rock Climbing</string>
    <string name="cycling">Cycling</string>
    <string name="mountainBiking">Mountain Biking</string>
    <string name="swimming">Swimming</string>
    <string name="cricket">Cricket</string>
    <string name="judo">Judo</string>
    <string name="taiQuanDao">Tai Quan Dao</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="Fitomatic">dropDownMenuExample</string>
    <string-array name="activities">
        <item name="running">Running</item>
        <item name="walking">Walking</item>
        <item name="weightLifting">Weight Lifting</item>
        <item name="rowing">Rowing</item>
        <item name="yoga">Yoga</item>
        <item name="soccer">Soccer</item>
        <item name="hiking">Hiking</item>
        <item name="gymnastics">Gymnastics</item>
        <item name="aFL">AFL</item>
        <item name="tennis">Tennis</item>
        <item name="rugby">Rugby</item>
        <item name="surfing">Surfing</item>
        <item name="golf">Golf</item>
        <item name="bowling">Bowling</item>
        <item name="karate">Karate</item>
        <item name="bouldering">Bouldering</item>
        <item name="rockClimbing">Rock Climbing</item>
        <item name="cycling">Cycling</item>
        <item name="mountainBiking">Mountain Biking</item>
        <item name="swimming">Swimming</item>
        <item name="cricket">Cricket</item>
        <item name="judo">Judo</item>
        <item name="taiQuanDao">Tai Quan Dao</item>
    </string-array>
    <string name="title_activity_host">hostActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="individual_post_description">Individual post description</string>
    <string name="individual_post_title">Individual Post Title</string>
    <string name="follow">Follow</string>
    <string name="like">Like</string>
    <string name="author_name">Author Name</string>
    <string name="activity">Activity</string>
    <string name="xx_xx_xx">XX/XX/XX</string>
    <string name="enter_message">Enter Message</string>
    <string name="todo">TODO</string>
    <string name="imageview2">imageView2</string>
    <string name="imageview">imageView</string>
    <string name="applogo">appLogo</string>
    <string name="pfp">pfp</string>
    <string name="editicon">editIcon</string>
    <string name="imageview5">imageview5</string>
    <string name="large_post_title">Large Post Title</string>
    <string name="large_post_description">Large Post Description</string>
    <string name="x_xxpp">$X.XXpp</string>
    <string name="small_post_title">Small Post title</string>
    <string name="small_post_description">small post description</string>
    <string name="location_location">Location, Location</string>
    <string name="your_posts">Your Posts</string>
    <string name="smallspinner">smallSpinner</string>
    <string name="john_smith">John Smith</string>
    <string name="block">Block</string>
    <string name="max_participants">Max Participants 0</string>
    <string name="log_out">log out</string>
    <string name="following">Following</string>
    <string name="price_0">Price $0</string>
    <string name="max_participants_0">Max Participants 0</string>
    <string name="create_post">Create Post</string>
    <string name="description_of_post">Description of Post</string>
    <string name="title_of_post">Title of Post</string>
    <string name="activities">Activities</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="first_name">First Name</string>
    <string name="tell_everyone_about_yourself">Tell Everyone About Yourself!</string>
    <string name="last_name">Last Name</string>
    <string name="create_profile">Create Profile</string>
    <string name="back_to_interests">Back To Interests</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age_0">Age 0</string>
    <string name="fitomatic_logo">Fitomatic logo</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_account">Create Account</string>
    <string name="i_already_have_an_account">I Already have an Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="choose_some_interests_you_want_the_people_you_meet_to_share_or_do_with_you">Choose some interests you want the people you meet to share or do with you.</string>
    <string name="next_step">Next Step</string>
    <string name="progress_bar">progress bar</string>

</resources>