<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ajsmdllz.fitomatic.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.ajsmdllz.fitomatic.ui.message.MessageFragment"
        android:label="message"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ajsmdllz.fitomatic.ui.post.PostFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ajsmdllz.fitomatic.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>