<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Posts.typesOfPosts.IndividualPostFragment">

    <EditText
        android:id="@+id/createDateSingle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/textfield"
        android:ems="10"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="@+id/createTitleSingle"
        app:layout_constraintStart_toStartOf="@+id/createTitleSingle"
        app:layout_constraintTop_toBottomOf="@+id/createTitleSingle"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spinnerActivitySingle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createDateSingle"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/createTitleSingle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/textfield"
        android:ems="10"
        android:hint="@string/title_of_post"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/createDescriptionSingle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/textfield"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description_of_post"
        android:inputType="text|textMultiLine"
        android:minHeight="200dp"
        android:padding="15dp"
        android:singleLine="false"
        android:textColor="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/createPostSingle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerActivitySingle"
        tools:ignore="RtlCompat,TextContrastCheck"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/createPostSingle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/action_button"
        android:text="@string/create_post"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>